--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "core-js": "^3.2.1",
     "joi": "^13.3.0",
     "path-parser": "^4.1.0",
     "promise-mysql": "^3.3.1",
